# WM-Fastapi

./: .env-compose.template  .gitignore  .pre-commit-config.yaml  README.md  WM-Fastapi.postman_collection.json  docker-compose.yml  pyproject.toml
app/: .env.template  main.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  trade_results.py
app/api/api_v1/crud/: __init__.py  trade_results.py
app/core/: config.py  lifespan.py
app/core/models/: __init__.py  base.py  db_connector.py  trade_result.py
app/core/redis/: __init__.py  redis_cache.py  redis_tasks.py  request_key_builder.py
app/core/schemas/: __init__.py  trade_result.py  trade_results.py
app/migration_utils/alembic/versions/: 2024_11_22_1129-48e69b77576f_create_spimexresult_model.py
app/tests/: conftest.py
app/tests/api/api_v1/: fixtures.py  test_get_dynamics.py  test_get_last_trading_dates.py  test_get_trading_results.py  test_trade_results.py
app/tests/unittests/: test_calculate_cache_expiration.py  test_clear_cache_task.py  test_get_redis_cache.py  test_lifespan.py  test_redis_client.py
app/utils/: __init__.py  cache_expiration.py
