[tool.poetry]
name = "wm-fastapi-practice"
version = "0.1.0"
description = ""
authors = ["Григорий Кузеванов <grkuzevanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
fastapi-cache2 = "^0.2.2"
redis = {extras = ["asyncio"], version = "^5.2.0"}
apscheduler = "^3.11.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["*.py"]
exclude = [
    "*/.*",
    "*/__pycache__/*",
    "*.test.py",
        ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "B008",
    "E402"
]

[tool.ruff.lint.isort]
known-first-party = ["api", "core", "migration_utils"]
